--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -1,5 +1,10 @@
 <html>
   <head>
+    <style>
+      table, th, td {
+        border: 1px solid black;
+      }
+    </style>
     <title>Super Smash Bros. Character List</title>
   </head>
   <body>
