--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -1,8 +1,11 @@
 <html>
   <head>
     <style>
+      body {
+        font-family: "Arial", Sans-serif;
+      }
       table, th, td {
-        border: 1px solid black;
+        border: 1px solid #666666;
       }
     </style>
     <title>Super Smash Bros. Character List</title>
