--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -15,6 +15,7 @@
     <table>
       <tr>
         <th>Number</th>
+        <th>Image</th>
         <th>Character</th>
         <th>First Smash Appearance</th>
         <th>Super Smash Bros. Status</th>
@@ -27,6 +28,7 @@
       </tr>
       <tr>
         <td>1</td>
+        <td><img src="images/Mario.png"/></td>
         <td>Mario</td>
         <td>Super Smash Bros.</td>
         <td>Default</td>
