--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -39,6 +39,45 @@
         <td></td>
         <td>Mario</td>
       </tr>
+      <tr>
+        <td>2</td>
+        <td><img src="images/DonkeyKong.png"/></td>
+        <td>Donkey Kong</td>
+        <td>Super Smash Bros.</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td></td>
+        <td>Donkey Kong</td>
+      </tr>
+      <tr>
+        <td>3</td>
+        <td><img src="images/Link.png"/></td>
+        <td>Link</td>
+        <td>Super Smash Bros.</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td></td>
+        <td>The Legend of Zelda</td>
+      </tr>
+      <tr>
+        <td>4</td>
+        <td><img src="images/Samus.png"/></td>
+        <td>Samus</td>
+        <td>Super Smash Bros.</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td></td>
+        <td>Metroid</td>
+      </tr>
     </table>
   </body>
 </html>
