--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -78,6 +78,110 @@
         <td></td>
         <td>Metroid</td>
       </tr>
+      <tr>
+        <td>5</td>
+        <td><img src="images/Yoshi.png"/></td>
+        <td>Yoshi</td>
+        <td>Super Smash Bros.</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td></td>
+        <td>Yoshi</td>
+      </tr>
+      <tr>
+        <td>6</td>
+        <td><img src="images/Kirby.png"/></td>
+        <td>Kirby</td>
+        <td>Super Smash Bros.</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td></td>
+        <td>Kirby</td>
+      </tr>
+      <tr>
+        <td>7</td>
+        <td><img src="images/Fox.png"/></td>
+        <td>Fox</td>
+        <td>Super Smash Bros.</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td></td>
+        <td>Star Fox</td>
+      </tr>
+      <tr>
+        <td>8</td>
+        <td><img src="images/Pikachu.png"/></td>
+        <td>Pikachu</td>
+        <td>Super Smash Bros.</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td></td>
+        <td>Pokémon</td>
+      </tr>
+      <tr>
+        <td>9</td>
+        <td><img src="images/Luigi.png"/></td>
+        <td>Luigi</td>
+        <td>Super Smash Bros.</td>
+        <td>Unlockable</td>
+        <td>Unlockable</td>
+        <td>Unlockable</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td></td>
+        <td>Mario</td>
+      </tr>
+      <tr>
+        <td>10</td>
+        <td><img src="images/Ness.png"/></td>
+        <td>Ness</td>
+        <td>Super Smash Bros.</td>
+        <td>Unlockable</td>
+        <td>Default</td>
+        <td>Unlockable</td>
+        <td>Unlockable</td>
+        <td>Default</td>
+        <td></td>
+        <td>EarthBound</td>
+      </tr>
+      <tr>
+        <td>11</td>
+        <td><img src="images/CaptainFalcon.png"/></td>
+        <td>Captain Falcon</td>
+        <td>Super Smash Bros.</td>
+        <td>Unlockable</td>
+        <td>Default</td>
+        <td>Unlockable</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td></td>
+        <td>F-Zero</td>
+      </tr>
+      <tr>
+        <td>12</td>
+        <td><img src="images/Jigglypuff.png"/></td>
+        <td>Jigglypuff</td>
+        <td>Super Smash Bros.</td>
+        <td>Unlockable</td>
+        <td>Unlockable</td>
+        <td>Unlockable</td>
+        <td>Unlockable</td>
+        <td>Default</td>
+        <td></td>
+        <td>Pokémon</td>
+      </tr>
     </table>
   </body>
 </html>
