--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <style>
       body {
@@ -29,7 +29,7 @@
       </tr>
       <tr>
         <td>1</td>
-        <td><img src="images/Mario.png"/></td>
+        <td><img src="images/Mario.png" alt="Mario"/></td>
         <td>Mario</td>
         <td>Super Smash Bros.</td>
         <td>Default</td>
@@ -42,7 +42,7 @@
       </tr>
       <tr>
         <td>2</td>
-        <td><img src="images/DonkeyKong.png"/></td>
+        <td><img src="images/DonkeyKong.png" alt="Donkey Kong"/></td>
         <td>Donkey Kong</td>
         <td>Super Smash Bros.</td>
         <td>Default</td>
@@ -55,7 +55,7 @@
       </tr>
       <tr>
         <td>3</td>
-        <td><img src="images/Link.png"/></td>
+        <td><img src="images/Link.png" alt="Link"/></td>
         <td>Link</td>
         <td>Super Smash Bros.</td>
         <td>Default</td>
@@ -68,7 +68,7 @@
       </tr>
       <tr>
         <td>4</td>
-        <td><img src="images/Samus.png"/></td>
+        <td><img src="images/Samus.png" alt="Samus"/></td>
         <td>Samus</td>
         <td>Super Smash Bros.</td>
         <td>Default</td>
@@ -81,7 +81,7 @@
       </tr>
       <tr>
         <td>5</td>
-        <td><img src="images/Yoshi.png"/></td>
+        <td><img src="images/Yoshi.png" alt="Yoshi"/></td>
         <td>Yoshi</td>
         <td>Super Smash Bros.</td>
         <td>Default</td>
@@ -94,7 +94,7 @@
       </tr>
       <tr>
         <td>6</td>
-        <td><img src="images/Kirby.png"/></td>
+        <td><img src="images/Kirby.png" alt="Kirby"/></td>
         <td>Kirby</td>
         <td>Super Smash Bros.</td>
         <td>Default</td>
@@ -107,7 +107,7 @@
       </tr>
       <tr>
         <td>7</td>
-        <td><img src="images/Fox.png"/></td>
+        <td><img src="images/Fox.png" alt="Fox"/></td>
         <td>Fox</td>
         <td>Super Smash Bros.</td>
         <td>Default</td>
@@ -120,7 +120,7 @@
       </tr>
       <tr>
         <td>8</td>
-        <td><img src="images/Pikachu.png"/></td>
+        <td><img src="images/Pikachu.png" alt="Pikachu"/></td>
         <td>Pikachu</td>
         <td>Super Smash Bros.</td>
         <td>Default</td>
@@ -133,7 +133,7 @@
       </tr>
       <tr>
         <td>9</td>
-        <td><img src="images/Luigi.png"/></td>
+        <td><img src="images/Luigi.png" alt="Luigi"/></td>
         <td>Luigi</td>
         <td>Super Smash Bros.</td>
         <td>Unlockable</td>
@@ -146,7 +146,7 @@
       </tr>
       <tr>
         <td>10</td>
-        <td><img src="images/Ness.png"/></td>
+        <td><img src="images/Ness.png" alt="Ness"/></td>
         <td>Ness</td>
         <td>Super Smash Bros.</td>
         <td>Unlockable</td>
@@ -159,7 +159,7 @@
       </tr>
       <tr>
         <td>11</td>
-        <td><img src="images/CaptainFalcon.png"/></td>
+        <td><img src="images/CaptainFalcon.png" alt="Captain Falcon"/></td>
         <td>Captain Falcon</td>
         <td>Super Smash Bros.</td>
         <td>Unlockable</td>
@@ -172,7 +172,7 @@
       </tr>
       <tr>
         <td>12</td>
-        <td><img src="images/Jigglypuff.png"/></td>
+        <td><img src="images/Jigglypuff.png" alt="Jigglypuff"/></td>
         <td>Jigglypuff</td>
         <td>Super Smash Bros.</td>
         <td>Unlockable</td>
