--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -183,6 +183,162 @@
         <td></td>
         <td>Pokémon</td>
       </tr>
+      <tr>
+        <td>13</td>
+        <td><img src="images/Peach.png" alt="Peach"/></td>
+        <td>Peach</td>
+        <td>Super Smash Bros. Melee</td>
+        <td>N/A</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td></td>
+        <td>Mario</td>
+      </tr>
+      <tr>
+        <td>13ε</td>
+        <td><img src="images/Daisy.png" alt="Daisy"/></td>
+        <td>Daisy</td>
+        <td>Super Smash Bros. Ultimate</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td></td>
+        <td>Mario</td>
+      </tr>
+      <tr>
+        <td>14</td>
+        <td><img src="images/Bowser.png" alt="Bowser"/></td>
+        <td>Bowser</td>
+        <td>Super Smash Bros. Melee</td>
+        <td>N/A</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td></td>
+        <td>Mario</td>
+      </tr>
+      <tr>
+        <td>15</td>
+        <td><img src="images/IceClimbers.png" alt="Ice Climbers"/></td>
+        <td>Ice Climbers</td>
+        <td>Super Smash Bros. Melee</td>
+        <td>N/A</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td></td>
+        <td>Ice Climber</td>
+      </tr>
+      <tr>
+        <td>16</td>
+        <td><img src="images/Sheik.png" alt="Sheik"/></td>
+        <td>Sheik</td>
+        <td>Super Smash Bros. Melee</td>
+        <td>N/A</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td></td>
+        <td>The Legend of Zelda</td>
+      </tr>
+      <tr>
+        <td>17</td>
+        <td><img src="images/Zelda.png" alt="Zelda"/></td>
+        <td>Zelda</td>
+        <td>Super Smash Bros. Melee</td>
+        <td>N/A</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td></td>
+        <td>The Legend of Zelda</td>
+      </tr>
+      <tr>
+        <td>18</td>
+        <td><img src="images/DrMario.png" alt="Dr. Mario"/></td>
+        <td>Dr. Mario</td>
+        <td>Super Smash Bros. Melee</td>
+        <td>N/A</td>
+        <td>Unlockable</td>
+        <td>N/A</td>
+        <td>Unlockable</td>
+        <td>Unlockable</td>
+        <td></td>
+        <td>Mario</td>
+      </tr>
+      <tr>
+        <td>19</td>
+        <td><img src="images/Pichu.png" alt="Pichu"/></td>
+        <td>Pichu</td>
+        <td>Super Smash Bros. Melee</td>
+        <td>N/A</td>
+        <td>Unlockable</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td></td>
+        <td>Pokémon</td>
+      </tr>
+      <tr>
+        <td>20</td>
+        <td><img src="images/Falco.png" alt="Falco"/></td>
+        <td>Falco</td>
+        <td>Super Smash Bros. Melee</td>
+        <td>N/A</td>
+        <td>Unlockable</td>
+        <td>Unlockable</td>
+        <td>Unlockable</td>
+        <td>Unlockable</td>
+        <td></td>
+        <td>Star Fox</td>
+      </tr>
+      <tr>
+        <td>21</td>
+        <td><img src="images/Marth.png" alt="Marth"/></td>
+        <td>Marth</td>
+        <td>Super Smash Bros. Melee</td>
+        <td>N/A</td>
+        <td>Unlockable</td>
+        <td>Unlockable</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td></td>
+        <td>Fire Emblem</td>
+      </tr>
+      <tr>
+        <td>21ε</td>
+        <td><img src="images/Lucina.png" alt="Lucina"/></td>
+        <td>Lucina</td>
+        <td>Super Smash Bros. for Nintendo 3DS / Wii U</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>Unlockable</td>
+        <td>Unlockable</td>
+        <td></td>
+        <td>Fire Emblem</td>
+      </tr>
+      <tr>
+        <td>22</td>
+        <td><img src="images/YoungLink.png" alt="Young Link"/></td>
+        <td>Young Link</td>
+        <td>Super Smash Bros. Melee</td>
+        <td>N/A</td>
+        <td>Unlockable</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td></td>
+        <td>The Legend of Zelda</td>
+      </tr>
     </table>
   </body>
 </html>
