--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -339,6 +339,58 @@
         <td></td>
         <td>The Legend of Zelda</td>
       </tr>
+      <tr>
+        <td>23</td>
+        <td><img src="images/Ganondorf.png" alt="Ganondorf"/></td>
+        <td>Ganondorf</td>
+        <td>Super Smash Bros. Melee</td>
+        <td>N/A</td>
+        <td>Unlockable</td>
+        <td>Unlockable</td>
+        <td>Unlockable</td>
+        <td>Default</td>
+        <td></td>
+        <td>The Legend of Zelda</td>
+      </tr>
+      <tr>
+        <td>24</td>
+        <td><img src="images/Mewtwo.png" alt="Mewtwo"/></td>
+        <td>Mewtwo</td>
+        <td>Super Smash Bros. Melee</td>
+        <td>N/A</td>
+        <td>Unlockable</td>
+        <td>N/A</td>
+        <td>Downloadable</td>
+        <td>Downloadable</td>
+        <td></td>
+        <td>Pokémon</td>
+      </tr>
+      <tr>
+        <td>25</td>
+        <td><img src="images/Roy.png" alt="Roy"/></td>
+        <td>Roy</td>
+        <td>Super Smash Bros. Melee</td>
+        <td>N/A</td>
+        <td>Unlockable</td>
+        <td>N/A</td>
+        <td>Unlockable</td>
+        <td>Unlockable</td>
+        <td></td>
+        <td>Fire Emblem</td>
+      </tr>
+      <tr>
+        <td>26</td>
+        <td><img src="images/MrGameWatch.png" alt="Mr. Game & Watch"/></td>
+        <td>Mr. Game & Watch</td>
+        <td>Super Smash Bros. Melee</td>
+        <td>N/A</td>
+        <td>Unlockable</td>
+        <td>Unlockable</td>
+        <td>Unlockable</td>
+        <td>Unlockable</td>
+        <td></td>
+        <td>Game & Watch</td>
+      </tr>
     </table>
   </body>
 </html>
