--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -391,6 +391,45 @@
         <td></td>
         <td>Game & Watch</td>
       </tr>
+      <tr>
+        <td>27</td>
+        <td><img src="images/MetaKnight.png" alt="Meta Knight"/></td>
+        <td>Meta Knight</td>
+        <td>Super Smash Bros. Brawl</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td></td>
+        <td>Kirby</td>
+      </tr>
+      <tr>
+        <td>28</td>
+        <td><img src="images/Pit.png" alt="Pit"/></td>
+        <td>Pit</td>
+        <td>Super Smash Bros. Brawl</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td></td>
+        <td>Kid Icarus</td>
+      </tr>
+      <tr>
+        <td>28ε</td>
+        <td><img src="images/DarkPit.png" alt="Dark Pit"/></td>
+        <td>Dark Pit</td>
+        <td>Super Smash Bros. for Nintendo 3DS / Wii U</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>Unlockable</td>
+        <td>Unlockable</td>
+        <td></td>
+        <td>Kid Icarus</td>
+      </tr>
     </table>
   </body>
 </html>
