--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -430,6 +430,227 @@
         <td></td>
         <td>Kid Icarus</td>
       </tr>
+      <tr>
+        <td>29</td>
+        <td><img src="images/ZeroSuitSamus.png" alt="Zero Suit Samus"/></td>
+        <td>Zero Suit Samus</td>
+        <td>Super Smash Bros. Brawl</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td></td>
+        <td>Metroid</td>
+      </tr>
+      <tr>
+        <td>30</td>
+        <td><img src="images/Wario.png" alt="Wario"/></td>
+        <td>Wario</td>
+        <td>Super Smash Bros. Brawl</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>Default</td>
+        <td>Unlockable</td>
+        <td>Unlockable</td>
+        <td></td>
+        <td>Wario</td>
+      </tr>
+      <tr>
+        <td>31</td>
+        <td><img src="images/Snake.png" alt="Snake"/></td>
+        <td>Snake</td>
+        <td>Super Smash Bros. Brawl</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>Unlockable</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td></td>
+        <td>Metal Gear</td>
+      </tr>
+      <tr>
+        <td>32</td>
+        <td><img src="images/Ike.png" alt="Ike"/></td>
+        <td>Ike</td>
+        <td>Super Smash Bros. Brawl</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td></td>
+        <td>Fire Emblem</td>
+      </tr>
+      <tr>
+        <td>33/34/35</td>
+        <td><img src="images/PokémonTrainer.png" alt="Pokémon Trainer"/></td>
+        <td>Pokémon Trainer</td>
+        <td>Super Smash Bros. Brawl</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>Default</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td></td>
+        <td>Pokémon</td>
+      </tr>
+      <tr>
+        <td>33</td>
+        <td><img src="images/Squirtle.png" alt="Squirtle"/></td>
+        <td>Squirtle</td>
+        <td>Super Smash Bros. Brawl</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>Default</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td></td>
+        <td>Pokémon</td>
+      </tr>
+      <tr>
+        <td>34</td>
+        <td><img src="images/Ivysaur.png" alt="Ivysaur"/></td>
+        <td>Ivysaur</td>
+        <td>Super Smash Bros. Brawl</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>Default</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td></td>
+        <td>Pokémon</td>
+      </tr>
+      <tr>
+        <td>35</td>
+        <td><img src="images/Charizard.png" alt="Charizard"/></td>
+        <td>Charizard</td>
+        <td>Super Smash Bros. Brawl</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td></td>
+        <td>Pokémon</td>
+      </tr>
+      <tr>
+        <td>36</td>
+        <td><img src="images/DiddyKong.png" alt="Diddy Kong"/></td>
+        <td>Diddy Kong</td>
+        <td>Super Smash Bros. Brawl</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td></td>
+        <td>Donkey Kong</td>
+      </tr>
+      <tr>
+        <td>37</td>
+        <td><img src="images/Lucas.png" alt="Lucas"/></td>
+        <td>Lucas</td>
+        <td>Super Smash Bros. Brawl</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>Default</td>
+        <td>Downloadable</td>
+        <td>Downloadable</td>
+        <td></td>
+        <td>Lucas</td>
+      </tr>
+      <tr>
+        <td>38</td>
+        <td><img src="images/Sonic.png" alt="Sonic"/></td>
+        <td>Sonic</td>
+        <td>Super Smash Bros. Brawl</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>Unlockable</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td></td>
+        <td>Sonic</td>
+      </tr>
+      <tr>
+        <td>39</td>
+        <td><img src="images/KingDedede.png" alt="King Dedede"/></td>
+        <td>King Dedede</td>
+        <td>Super Smash Bros. Brawl</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td></td>
+        <td>Kirby</td>
+      </tr>
+      <tr>
+        <td>40</td>
+        <td><img src="images/Olimar.png" alt="Olimar"/></td>
+        <td>Olimar</td>
+        <td>Super Smash Bros. Brawl</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td></td>
+        <td>Pikmin</td>
+      </tr>
+      <tr>
+        <td>41</td>
+        <td><img src="images/Lucario.png" alt="Lucario"/></td>
+        <td>Lucario</td>
+        <td>Super Smash Bros. Brawl</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>Unlocable</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td></td>
+        <td>Pokémon</td>
+      </tr>
+      <tr>
+        <td>42</td>
+        <td><img src="images/ROB.png" alt="R.O.B."/></td>
+        <td>R.O.B.</td>
+        <td>Super Smash Bros. Brawl</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>Unlockable</td>
+        <td>Unlockable</td>
+        <td>Unlockable</td>
+        <td></td>
+        <td>R.O.B.</td>
+      </tr>
+      <tr>
+        <td>43</td>
+        <td><img src="images/ToonLink.png" alt="Toon Link"/></td>
+        <td>Toon Link</td>
+        <td>Super Smash Bros. Brawl</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>Unlockable</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td></td>
+        <td>The Legend of Zelda</td>
+      </tr>
+      <tr>
+        <td>44</td>
+        <td><img src="images/Wolf.png" alt="Wolf"/></td>
+        <td>Wolf</td>
+        <td>Super Smash Bros. Brawl</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>Unlockable</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td></td>
+        <td>Star Fox</td>
+      </tr>
     </table>
   </body>
 </html>
