--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -484,7 +484,7 @@
       </tr>
       <tr>
         <td>33/34/35</td>
-        <td><img src="images/PokémonTrainer.png" alt="Pokémon Trainer"/></td>
+        <td><img src="images/PokemonTrainer.png" alt="Pokémon Trainer"/></td>
         <td>Pokémon Trainer</td>
         <td>Super Smash Bros. Brawl</td>
         <td>N/A</td>
