--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -651,6 +651,253 @@
         <td></td>
         <td>Star Fox</td>
       </tr>
+      <tr>
+        <td>45</td>
+        <td><img src="images/Villager.png" alt="Villager"/></td>
+        <td>Villager</td>
+        <td>Super Smash Bros. for Nintendo 3DS / Wii U</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td></td>
+        <td>Animal Crossing</td>
+      </tr>
+      <tr>
+        <td>46</td>
+        <td><img src="images/MegaMan.png" alt="Mega Man"/></td>
+        <td>Mega Man</td>
+        <td>Super Smash Bros. for Nintendo 3DS / Wii U</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td></td>
+        <td>Mega Man</td>
+      </tr>
+      <tr>
+        <td>47</td>
+        <td><img src="images/WiiFitTrainer.png" alt="Wii Fit Trainer"/></td>
+        <td>Wii Fit Trainer</td>
+        <td>Super Smash Bros. for Nintendo 3DS / Wii U</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td></td>
+        <td>Wii Fit</td>
+      </tr>
+      <tr>
+        <td>48</td>
+        <td><img src="images/RosalinaLuma.png" alt="Rosalina & Luma"/></td>
+        <td>Rosalina & Luma</td>
+        <td>Super Smash Bros. for Nintendo 3DS / Wii U</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td></td>
+        <td>Mario</td>
+      </tr>
+      <tr>
+        <td>49</td>
+        <td><img src="images/LittleMac.png" alt="Little Mac"/></td>
+        <td>Little Mac</td>
+        <td>Super Smash Bros. for Nintendo 3DS / Wii U</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td></td>
+        <td>Punch-Out!!</td>
+      </tr>
+      <tr>
+        <td>50</td>
+        <td><img src="images/Greninja.png" alt="Greninja"/></td>
+        <td>Greninja</td>
+        <td>Super Smash Bros. for Nintendo 3DS / Wii U</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td></td>
+        <td>Pokémon</td>
+      </tr>
+      <tr>
+        <td>51</td>
+        <td><img src="images/Mario.png" alt="Mario"/></td>
+        <td>Mario</td>
+        <td>Super Smash Bros. for Nintendo 3DS / Wii U</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td></td>
+        <td>Mario</td>
+      </tr>
+      <tr>
+        <td>52</td>
+        <td><img src="images/Mario.png" alt="Mario"/></td>
+        <td>Mario</td>
+        <td>Super Smash Bros. for Nintendo 3DS / Wii U</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td></td>
+        <td>Mario</td>
+      </tr>
+      <tr>
+        <td>53</td>
+        <td><img src="images/Mario.png" alt="Mario"/></td>
+        <td>Mario</td>
+        <td>Super Smash Bros. for Nintendo 3DS / Wii U</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td></td>
+        <td>Mario</td>
+      </tr>
+      <tr>
+        <td>54</td>
+        <td><img src="images/Mario.png" alt="Mario"/></td>
+        <td>Mario</td>
+        <td>Super Smash Bros. for Nintendo 3DS / Wii U</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td></td>
+        <td>Mario</td>
+      </tr>
+      <tr>
+        <td>55</td>
+        <td><img src="images/Mario.png" alt="Mario"/></td>
+        <td>Mario</td>
+        <td>Super Smash Bros. for Nintendo 3DS / Wii U</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td></td>
+        <td>Mario</td>
+      </tr>
+      <tr>
+        <td>56</td>
+        <td><img src="images/Mario.png" alt="Mario"/></td>
+        <td>Mario</td>
+        <td>Super Smash Bros. for Nintendo 3DS / Wii U</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td></td>
+        <td>Mario</td>
+      </tr>
+      <tr>
+        <td>57</td>
+        <td><img src="images/Mario.png" alt="Mario"/></td>
+        <td>Mario</td>
+        <td>Super Smash Bros. for Nintendo 3DS / Wii U</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td></td>
+        <td>Mario</td>
+      </tr>
+      <tr>
+        <td>58</td>
+        <td><img src="images/Mario.png" alt="Mario"/></td>
+        <td>Mario</td>
+        <td>Super Smash Bros. for Nintendo 3DS / Wii U</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td></td>
+        <td>Mario</td>
+      </tr>
+      <tr>
+        <td>59</td>
+        <td><img src="images/Mario.png" alt="Mario"/></td>
+        <td>Mario</td>
+        <td>Super Smash Bros. for Nintendo 3DS / Wii U</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td></td>
+        <td>Mario</td>
+      </tr>
+      <tr>
+        <td>60</td>
+        <td><img src="images/Mario.png" alt="Mario"/></td>
+        <td>Mario</td>
+        <td>Super Smash Bros. for Nintendo 3DS / Wii U</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td></td>
+        <td>Mario</td>
+      </tr>
+      <tr>
+        <td>61</td>
+        <td><img src="images/Mario.png" alt="Mario"/></td>
+        <td>Mario</td>
+        <td>Super Smash Bros. for Nintendo 3DS / Wii U</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td></td>
+        <td>Mario</td>
+      </tr>
+      <tr>
+        <td>62</td>
+        <td><img src="images/Mario.png" alt="Mario"/></td>
+        <td>Mario</td>
+        <td>Super Smash Bros. for Nintendo 3DS / Wii U</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td></td>
+        <td>Mario</td>
+      </tr>
+      <tr>
+        <td>63</td>
+        <td><img src="images/Mario.png" alt="Mario"/></td>
+        <td>Mario</td>
+        <td>Super Smash Bros. for Nintendo 3DS / Wii U</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td>Default</td>
+        <td></td>
+        <td>Mario</td>
+      </tr>
     </table>
   </body>
 </html>
