--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -721,9 +721,9 @@
         <td><img src="images/Greninja.png" alt="Greninja"/></td>
         <td>Greninja</td>
         <td>Super Smash Bros. for Nintendo 3DS / Wii U</td>
-        <td>Default</td>
-        <td>Default</td>
-        <td>Default</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
         <td>Default</td>
         <td>Default</td>
         <td></td>
@@ -731,25 +731,25 @@
       </tr>
       <tr>
         <td>51</td>
-        <td><img src="images/Mario.png" alt="Mario"/></td>
-        <td>Mario</td>
+        <td><img src="images/MiiBrawler.png" alt="Mii Brawler"/></td>
+        <td>Mii Brawler</td>
         <td>Super Smash Bros. for Nintendo 3DS / Wii U</td>
-        <td>Default</td>
-        <td>Default</td>
-        <td>Default</td>
-        <td>Default</td>
-        <td>Default</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>Custom</td>
+        <td>Custom</td>
         <td></td>
-        <td>Mario</td>
+        <td>Super Smash Bros.</td>
       </tr>
       <tr>
         <td>52</td>
         <td><img src="images/Mario.png" alt="Mario"/></td>
         <td>Mario</td>
         <td>Super Smash Bros. for Nintendo 3DS / Wii U</td>
-        <td>Default</td>
-        <td>Default</td>
-        <td>Default</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
         <td>Default</td>
         <td>Default</td>
         <td></td>
@@ -760,9 +760,9 @@
         <td><img src="images/Mario.png" alt="Mario"/></td>
         <td>Mario</td>
         <td>Super Smash Bros. for Nintendo 3DS / Wii U</td>
-        <td>Default</td>
-        <td>Default</td>
-        <td>Default</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
         <td>Default</td>
         <td>Default</td>
         <td></td>
@@ -773,9 +773,9 @@
         <td><img src="images/Mario.png" alt="Mario"/></td>
         <td>Mario</td>
         <td>Super Smash Bros. for Nintendo 3DS / Wii U</td>
-        <td>Default</td>
-        <td>Default</td>
-        <td>Default</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
         <td>Default</td>
         <td>Default</td>
         <td></td>
@@ -786,9 +786,9 @@
         <td><img src="images/Mario.png" alt="Mario"/></td>
         <td>Mario</td>
         <td>Super Smash Bros. for Nintendo 3DS / Wii U</td>
-        <td>Default</td>
-        <td>Default</td>
-        <td>Default</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
         <td>Default</td>
         <td>Default</td>
         <td></td>
@@ -799,9 +799,9 @@
         <td><img src="images/Mario.png" alt="Mario"/></td>
         <td>Mario</td>
         <td>Super Smash Bros. for Nintendo 3DS / Wii U</td>
-        <td>Default</td>
-        <td>Default</td>
-        <td>Default</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
         <td>Default</td>
         <td>Default</td>
         <td></td>
@@ -812,9 +812,9 @@
         <td><img src="images/Mario.png" alt="Mario"/></td>
         <td>Mario</td>
         <td>Super Smash Bros. for Nintendo 3DS / Wii U</td>
-        <td>Default</td>
-        <td>Default</td>
-        <td>Default</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
         <td>Default</td>
         <td>Default</td>
         <td></td>
@@ -825,9 +825,9 @@
         <td><img src="images/Mario.png" alt="Mario"/></td>
         <td>Mario</td>
         <td>Super Smash Bros. for Nintendo 3DS / Wii U</td>
-        <td>Default</td>
-        <td>Default</td>
-        <td>Default</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
         <td>Default</td>
         <td>Default</td>
         <td></td>
@@ -838,9 +838,9 @@
         <td><img src="images/Mario.png" alt="Mario"/></td>
         <td>Mario</td>
         <td>Super Smash Bros. for Nintendo 3DS / Wii U</td>
-        <td>Default</td>
-        <td>Default</td>
-        <td>Default</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
         <td>Default</td>
         <td>Default</td>
         <td></td>
@@ -851,9 +851,9 @@
         <td><img src="images/Mario.png" alt="Mario"/></td>
         <td>Mario</td>
         <td>Super Smash Bros. for Nintendo 3DS / Wii U</td>
-        <td>Default</td>
-        <td>Default</td>
-        <td>Default</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
         <td>Default</td>
         <td>Default</td>
         <td></td>
@@ -864,9 +864,9 @@
         <td><img src="images/Mario.png" alt="Mario"/></td>
         <td>Mario</td>
         <td>Super Smash Bros. for Nintendo 3DS / Wii U</td>
-        <td>Default</td>
-        <td>Default</td>
-        <td>Default</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
         <td>Default</td>
         <td>Default</td>
         <td></td>
@@ -877,9 +877,9 @@
         <td><img src="images/Mario.png" alt="Mario"/></td>
         <td>Mario</td>
         <td>Super Smash Bros. for Nintendo 3DS / Wii U</td>
-        <td>Default</td>
-        <td>Default</td>
-        <td>Default</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
         <td>Default</td>
         <td>Default</td>
         <td></td>
@@ -890,9 +890,9 @@
         <td><img src="images/Mario.png" alt="Mario"/></td>
         <td>Mario</td>
         <td>Super Smash Bros. for Nintendo 3DS / Wii U</td>
-        <td>Default</td>
-        <td>Default</td>
-        <td>Default</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
         <td>Default</td>
         <td>Default</td>
         <td></td>
