--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -744,34 +744,34 @@
       </tr>
       <tr>
         <td>52</td>
-        <td><img src="images/Mario.png" alt="Mario"/></td>
-        <td>Mario</td>
+        <td><img src="images/MiiSwordfighter.png" alt="Mii Swordfighter"/></td>
+        <td>Mii Swordfighter</td>
         <td>Super Smash Bros. for Nintendo 3DS / Wii U</td>
         <td>N/A</td>
         <td>N/A</td>
         <td>N/A</td>
-        <td>Default</td>
-        <td>Default</td>
+        <td>Custom</td>
+        <td>Custom</td>
         <td></td>
-        <td>Mario</td>
+        <td>Super Smash Bros.</td>
       </tr>
       <tr>
         <td>53</td>
-        <td><img src="images/Mario.png" alt="Mario"/></td>
-        <td>Mario</td>
+        <td><img src="images/MiiGunner.png" alt="Mii Gunner"/></td>
+        <td>Mii Gunner</td>
         <td>Super Smash Bros. for Nintendo 3DS / Wii U</td>
         <td>N/A</td>
         <td>N/A</td>
         <td>N/A</td>
-        <td>Default</td>
-        <td>Default</td>
+        <td>Custom</td>
+        <td>Custom</td>
         <td></td>
-        <td>Mario</td>
+        <td>Super Smash Bros</td>
       </tr>
       <tr>
         <td>54</td>
-        <td><img src="images/Mario.png" alt="Mario"/></td>
-        <td>Mario</td>
+        <td><img src="images/Palutena.png" alt="Palutena"/></td>
+        <td>Palutena</td>
         <td>Super Smash Bros. for Nintendo 3DS / Wii U</td>
         <td>N/A</td>
         <td>N/A</td>
@@ -779,12 +779,12 @@
         <td>Default</td>
         <td>Default</td>
         <td></td>
-        <td>Mario</td>
+        <td>Kid Icarus</td>
       </tr>
       <tr>
         <td>55</td>
-        <td><img src="images/Mario.png" alt="Mario"/></td>
-        <td>Mario</td>
+        <td><img src="images/Pac-Man.png" alt="Pac-Man"/></td>
+        <td>Pac-Man</td>
         <td>Super Smash Bros. for Nintendo 3DS / Wii U</td>
         <td>N/A</td>
         <td>N/A</td>
@@ -792,12 +792,12 @@
         <td>Default</td>
         <td>Default</td>
         <td></td>
-        <td>Mario</td>
+        <td>Pac-Man</td>
       </tr>
       <tr>
         <td>56</td>
-        <td><img src="images/Mario.png" alt="Mario"/></td>
-        <td>Mario</td>
+        <td><img src="images/Robin.png" alt="Robin"/></td>
+        <td>Robin</td>
         <td>Super Smash Bros. for Nintendo 3DS / Wii U</td>
         <td>N/A</td>
         <td>N/A</td>
@@ -805,12 +805,12 @@
         <td>Default</td>
         <td>Default</td>
         <td></td>
-        <td>Mario</td>
+        <td>Fire Emblem</td>
       </tr>
       <tr>
         <td>57</td>
-        <td><img src="images/Mario.png" alt="Mario"/></td>
-        <td>Mario</td>
+        <td><img src="images/Shulk.png" alt="Shulk"/></td>
+        <td>Shulk</td>
         <td>Super Smash Bros. for Nintendo 3DS / Wii U</td>
         <td>N/A</td>
         <td>N/A</td>
@@ -818,85 +818,111 @@
         <td>Default</td>
         <td>Default</td>
         <td></td>
-        <td>Mario</td>
+        <td>Xenoblade</td>
       </tr>
       <tr>
         <td>58</td>
-        <td><img src="images/Mario.png" alt="Mario"/></td>
-        <td>Mario</td>
+        <td><img src="images/BowserJr.png" alt="Bowser Jr."/></td>
+        <td>Bowser Jr.</td>
         <td>Super Smash Bros. for Nintendo 3DS / Wii U</td>
         <td>N/A</td>
         <td>N/A</td>
         <td>N/A</td>
-        <td>Default</td>
+        <td>Unlockable</td>
         <td>Default</td>
         <td></td>
         <td>Mario</td>
       </tr>
       <tr>
         <td>59</td>
-        <td><img src="images/Mario.png" alt="Mario"/></td>
-        <td>Mario</td>
+        <td><img src="images/DuckHunt.png" alt="Duck Hunt"/></td>
+        <td>Duck Hunt</td>
         <td>Super Smash Bros. for Nintendo 3DS / Wii U</td>
         <td>N/A</td>
         <td>N/A</td>
         <td>N/A</td>
-        <td>Default</td>
-        <td>Default</td>
+        <td>Unlockable</td>
+        <td>Unlockable</td>
         <td></td>
-        <td>Mario</td>
+        <td>Duck Hunt</td>
       </tr>
       <tr>
         <td>60</td>
-        <td><img src="images/Mario.png" alt="Mario"/></td>
-        <td>Mario</td>
+        <td><img src="images/Ryu.png" alt="Ryu"/></td>
+        <td>Ryu</td>
         <td>Super Smash Bros. for Nintendo 3DS / Wii U</td>
         <td>N/A</td>
         <td>N/A</td>
         <td>N/A</td>
-        <td>Default</td>
-        <td>Default</td>
+        <td>Downloadable</td>
+        <td>Downloadable</td>
         <td></td>
-        <td>Mario</td>
+        <td>Street Fighter</td>
       </tr>
       <tr>
         <td>61</td>
-        <td><img src="images/Mario.png" alt="Mario"/></td>
-        <td>Mario</td>
+        <td><img src="images/Cloud.png" alt="Cloud"/></td>
+        <td>Cloud</td>
         <td>Super Smash Bros. for Nintendo 3DS / Wii U</td>
         <td>N/A</td>
         <td>N/A</td>
         <td>N/A</td>
-        <td>Default</td>
-        <td>Default</td>
+        <td>Downloadable</td>
+        <td>Downloadable</td>
         <td></td>
-        <td>Mario</td>
+        <td>Final Fantasy</td>
       </tr>
       <tr>
         <td>62</td>
-        <td><img src="images/Mario.png" alt="Mario"/></td>
-        <td>Mario</td>
+        <td><img src="images/Corrin.png" alt="Corrin"/></td>
+        <td>Corrin</td>
         <td>Super Smash Bros. for Nintendo 3DS / Wii U</td>
         <td>N/A</td>
         <td>N/A</td>
         <td>N/A</td>
-        <td>Default</td>
-        <td>Default</td>
+        <td>Downloadable</td>
+        <td>Downloadable</td>
         <td></td>
-        <td>Mario</td>
+        <td>Fire Emblem</td>
       </tr>
       <tr>
         <td>63</td>
-        <td><img src="images/Mario.png" alt="Mario"/></td>
-        <td>Mario</td>
+        <td><img src="images/Bayonetta.png" alt="Bayonetta"/></td>
+        <td>Bayonetta</td>
         <td>Super Smash Bros. for Nintendo 3DS / Wii U</td>
         <td>N/A</td>
         <td>N/A</td>
         <td>N/A</td>
-        <td>Default</td>
-        <td>Default</td>
+        <td>Downloadable</td>
+        <td>Downloadable</td>
         <td></td>
-        <td>Mario</td>
+        <td>Bayonetta</td>
+      </tr>
+      <tr>
+        <td>64</td>
+        <td><img src="images/Inkling.png" alt="Inkling"/></td>
+        <td>Inkling</td>
+        <td>Super Smash Bros. Ultimate</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td></td>
+        <td>Splatoon</td>
+      </tr>
+      <tr>
+        <td>65</td>
+        <td><img src="images/Ridley.png" alt="Ridley"/></td>
+        <td>Ridley</td>
+        <td>Super Smash Bros. Ultimate</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td></td>
+        <td>Metroid</td>
       </tr>
     </table>
   </body>
