--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -925,5 +925,6 @@
         <td>Metroid</td>
       </tr>
     </table>
+    <p>See also: <a href="super-smash-bros-trailers.html">Super Smash Bros. Trailers</a></p>
   </body>
 </html>
