--- a/super-smash-bros-trailers.html
+++ b/super-smash-bros-trailers.html
@@ -12,5 +12,6 @@
     <h1>Super Smash Bros. Character Trailer</h1>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/L93H7YC-83o?rel=0&amp;start=48"
       frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    <p>See also: <a href="super-smash-bros.html">Super Smash Bros. Character List</a></p>
   </body>
 </html>
