--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -30,7 +30,7 @@
       <tr>
         <td>1</td>
         <td><img src="images/Mario.png" alt="Mario"/></td>
-        <td>Mario</td>
+        <td><a href="https://www.mariowiki.com/Mario">Mario</a></td>
         <td>Super Smash Bros.</td>
         <td>Default</td>
         <td>Default</td>
@@ -38,7 +38,7 @@
         <td>Default</td>
         <td>Default</td>
         <td></td>
-        <td>Mario</td>
+        <td><a href="https://www.mariowiki.com/">Mario</a></td>
       </tr>
       <tr>
         <td>2</td>
