--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -43,7 +43,7 @@
       <tr>
         <td>2</td>
         <td><img src="images/DonkeyKong.png" alt="Donkey Kong"/></td>
-        <td>Donkey Kong</td>
+        <td><a href="http://www.dkwiki.com/Donkey_Kong">Donkey Kong</a></td>
         <td>Super Smash Bros.</td>
         <td>Default</td>
         <td>Default</td>
@@ -51,7 +51,7 @@
         <td>Default</td>
         <td>Default</td>
         <td></td>
-        <td>Donkey Kong</td>
+        <td><a href="http://www.dkwiki.com/">Donkey Kong</a></td>
       </tr>
       <tr>
         <td>3</td>
